# machine_learning_c

./: .clang-format  .gitignore  CMakeLists.txt  README.md  pyproject.toml
include/: arena.h  arena_test.h  base.h  dataset.h  matrix.h  model.h  prng.h
src/: arena_test.c  main.c  matrix.c  model.c  prng.c
